add_subdirectory(ace/ttcp)
add_subdirectory(asio/chat)
add_subdirectory(asio/tutorial)
add_subdirectory(fastcgi)
add_subdirectory(filetransfer)
add_subdirectory(hub)
add_subdirectory(idleconnection)
add_subdirectory(maxconnection)
add_subdirectory(memcached/client)
add_subdirectory(memcached/server)
add_subdirectory(multiplexer)
add_subdirectory(netty/discard)
add_subdirectory(netty/echo)
add_subdirectory(netty/uptime)
add_subdirectory(pingpong)
add_subdirectory(roundtrip)
add_subdirectory(shorturl)
add_subdirectory(simple)
add_subdirectory(socks4a)
add_subdirectory(sudoku)
add_subdirectory(twisted/finger)
add_subdirectory(wordcount)
add_subdirectory(zeromq)

if(TARGET muduo::cares)
  add_subdirectory(cdns)
endif()

if(CURL_FOUND)
  add_subdirectory(curl)
endif()

if(MUDUO_PROTOBUF_FOUND)
  add_subdirectory(ace/logging)
  add_subdirectory(protobuf)
endif()

if(TARGET muduo::gd)
  add_subdirectory(procmon)
endif()
