muduo_add_executable(asio_chat_client client.cc)
target_link_libraries(asio_chat_client PRIVATE muduo_net)

muduo_add_executable(asio_chat_loadtest loadtest.cc)
target_link_libraries(asio_chat_loadtest PRIVATE muduo_net)

muduo_add_executable(asio_chat_server server.cc)
target_link_libraries(asio_chat_server PRIVATE muduo_net)

muduo_add_executable(asio_chat_server_threaded server_threaded.cc)
target_link_libraries(asio_chat_server_threaded PRIVATE muduo_net)

muduo_add_executable(asio_chat_server_threaded_efficient server_threaded_efficient.cc)
target_link_libraries(asio_chat_server_threaded_efficient PRIVATE muduo_net)

muduo_add_executable(asio_chat_server_threaded_highperformance server_threaded_highperformance.cc)
target_link_libraries(asio_chat_server_threaded_highperformance PRIVATE muduo_net)

