muduo_add_executable(asio_tutorial_timer2 timer2/timer.cc)
target_link_libraries(asio_tutorial_timer2 PRIVATE muduo_net)

muduo_add_executable(asio_tutorial_timer3 timer3/timer.cc)
target_link_libraries(asio_tutorial_timer3 PRIVATE muduo_net)

muduo_add_executable(asio_tutorial_timer4 timer4/timer.cc)
target_link_libraries(asio_tutorial_timer4 PRIVATE muduo_net)

muduo_add_executable(asio_tutorial_timer5 timer5/timer.cc)
target_link_libraries(asio_tutorial_timer5 PRIVATE muduo_net)

muduo_add_executable(asio_tutorial_timer6 timer6/timer.cc)
target_link_libraries(asio_tutorial_timer6 PRIVATE muduo_net)

