muduo_add_executable(netty_echo_client client.cc)
target_link_libraries(netty_echo_client PRIVATE muduo_net)

muduo_add_executable(netty_echo_server server.cc)
target_link_libraries(netty_echo_server PRIVATE muduo_net)

muduo_add_executable(netty_echo_server2 server2.cc)
target_link_libraries(netty_echo_server2 PRIVATE muduo_net)

