muduo_add_executable(twisted_finger01 finger01.cc)
target_link_libraries(twisted_finger01 PRIVATE muduo_net)

muduo_add_executable(twisted_finger02 finger02.cc)
target_link_libraries(twisted_finger02 PRIVATE muduo_net)

muduo_add_executable(twisted_finger03 finger03.cc)
target_link_libraries(twisted_finger03 PRIVATE muduo_net)

muduo_add_executable(twisted_finger04 finger04.cc)
target_link_libraries(twisted_finger04 PRIVATE muduo_net)

muduo_add_executable(twisted_finger05 finger05.cc)
target_link_libraries(twisted_finger05 PRIVATE muduo_net)

muduo_add_executable(twisted_finger06 finger06.cc)
target_link_libraries(twisted_finger06 PRIVATE muduo_net)

muduo_add_executable(twisted_finger07 finger07.cc)
target_link_libraries(twisted_finger07 PRIVATE muduo_net)

